--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Cookie-s-page by Aura-Lee</title>
+    <title>Cookie's webpage by Aura-Lee</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,8 +15,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Cookie-s-page</h1>
-        <p>a small dedication to my lovely cat</p>
+        <h1>Welcome to Cookie's page!</h1>
+        <p>Cookie is a fluffy little guy who enjoys eating and playing with his big bro Joy.</p>
 
         <p class="view"><a href="https://github.com/Aura-Lee/Cookie-s-page">View the Project on GitHub <small>Aura-Lee/Cookie-s-page</small></a></p>
 
