--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Welcome to Cookie's page!</h1>
+        <h1>Welcome to Cookie's homepage!</h1>
         <p>Cookie is a fluffy little guy who enjoys eating and playing with his big bro Joy.</p>
 
         <p class="view"><a href="https://github.com/Aura-Lee/Cookie-s-page">View the Project on GitHub <small>Aura-Lee/Cookie-s-page</small></a></p>
